# usue_shop.1.0.0.0

usue_app_back/: usue_shop.db
usue_app_back/usue_backend/: .dockerignore  .env  .gitignore  Dockerfile  README.md  __init__.py  main.py  pyproject.toml  usue_shop.db
usue_app_back/usue_backend/app/: __init__.py
usue_app_back/usue_backend/app/auth/: utils.py
usue_app_back/usue_backend/app/core/: enums.py  settings.py
usue_app_back/usue_backend/app/db/: database.py  seed.py
usue_app_back/usue_backend/app/ecommerce/: __init__.py  router.py  sample_data.py  schemas.py
usue_app_back/usue_backend/app/models/: __init__.py  base.py  category.py  order.py  product.py  service.py  user.py
usue_app_back/usue_backend/certs/: jwt_private.pem  jwt_public.pem
usue_app_front/: README.md  pubspec.yaml
usue_app_front/android/app/: build.gradle.kts
usue_app_front/ios/Runner/: Info.plist
usue_app_front/ios/Runner.xcodeproj/: project.pbxproj
usue_app_front/lib/: main.dart
usue_app_front/lib/config/: app_config.dart  theme.dart
usue_app_front/lib/controllers/: admin_controller.dart  auth_controller.dart  cart_controller.dart  catalog_controller.dart  order_controller.dart
usue_app_front/lib/models/: admin_account.dart  cart_item.dart  category_model.dart  order_model.dart  product_model.dart  service_model.dart  user_model.dart
usue_app_front/lib/routes/: app_router.dart
usue_app_front/linux/: CMakeLists.txt
usue_app_front/test/: widget_test.dart
usue_app_front/web/: index.html  manifest.json
usue_app_front/windows/: CMakeLists.txt
(+41 files in other folders)
